Fix: Add Vercel URL to CORS allowed origins